[gd_scene load_steps=7 format=3 uid="uid://d2gtcn2no6h3m"]

[ext_resource type="Script" uid="uid://b2v2jtrmpqsr0" path="res://Screens/GameScreen/Tabs/Combat/CombatRewards/combat_rewards.gd" id="1_x0xb8"]
[ext_resource type="PackedScene" uid="uid://72phavhx5xni" path="res://Screens/GameScreen/Tabs/EquipmentTab/equipment_details_binary_choice.tscn" id="2_flog0"]
[ext_resource type="Theme" uid="uid://blwnh8rwgc0eh" path="res://Graphic Elements/Themes/mainTab.tres" id="3_devvd"]
[ext_resource type="PackedScene" uid="uid://c5uhhdm6s5ims" path="res://Graphic Elements/Buttons/my_button.tscn" id="4_rqq3e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p07yr"]
bg_color = Color(0.729412, 0.729412, 0.729412, 1)
border_width_left = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yksyh"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_right = 3
border_color = Color(0, 0, 0, 1)

[node name="CombatRewards" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p07yr")
script = ExtResource("1_x0xb8")

[node name="TitlePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.1
theme_override_styles/panel = SubResource("StyleBoxFlat_yksyh")

[node name="Title" type="RichTextLabel" parent="TitlePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -27.5
offset_right = 48.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
text = "Loot!"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Content" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_right = -15.0
offset_bottom = -15.0

[node name="Details" parent="Content" instance=ExtResource("2_flog0")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
offset_left = 8.0
spriteScale = 12

[node name="InventoryPanel" type="Panel" parent="Content"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
offset_right = -7.0
theme = ExtResource("3_devvd")

[node name="VBoxContainer" type="VBoxContainer" parent="Content/InventoryPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0

[node name="TakeAllButton" parent="Content/InventoryPanel" instance=ExtResource("4_rqq3e")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 25
text = " Take All "

[connection signal="optionPressed" from="Content/Details" to="." method="_on_details_option_pressed"]
[connection signal="pressed" from="Content/InventoryPanel/TakeAllButton" to="." method="_on_take_all_button_pressed"]
